--- a/web4test/build.gradle
+++ b/web4test/build.gradle
@@ -46,33 +46,39 @@ repositories {
 // 가져올 의존 라이브러리를 지정
 // 참고!
 // - 의존 라이브러리 이름은 www.mvnrepository.com에서 검색해보라!
-//dependencies {
-//  // providedCompile : 컴파일 할 때만 사용하고, 배치에 포함하지 않는다.
-//  //                   /WEB-INF/lib 폴더에 배치하지 않는다.
-//  // 문법
-//  // providedCompile '그룹명:라이브러리명:버전'
-//  providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-//  
-//  // compile : 컴파일 할 때도 사용하고 배치할 때도 함께 복사된다.
-//  //           /WEB-INF/lib 폴더에 복사된다.
-//  compile 'org.mybatis:mybatis:3.2.8'
-//  compile 'javax.servlet:jstl:1.2'
-//  compile 'mysql:mysql-connector-java:5.1.35'
-//    
-//  // Spring MVC 프레임워크 관련 라이브러리
-//  compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
-//  
-//  // mybatis를 스프링 프레임워크에서 사용할 수 있도록 특별히 추가로 만든 클래스 라이브러리
-//  compile 'org.mybatis:mybatis-spring:1.2.2'
-//  
-//  // Spring jdbc 관련 라이브러리
-//  compile 'org.springframework:spring-jdbc:4.1.6.RELEASE'
-//  
-//  // fileUpload 의존 라이브러리
-//  compile 'commons-fileupload:commons-fileupload:1.3.1'
-//
-//}
-//
+dependencies {
+  // providedCompile : 컴파일 할 때만 사용하고, 배치에 포함하지 않는다.
+  //                   /WEB-INF/lib 폴더에 배치하지 않는다.
+  // 문법
+  // providedCompile '그룹명:라이브러리명:버전'
+  providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+  
+  // compile : 컴파일 할 때도 사용하고 배치할 때도 함께 복사된다.
+  //           /WEB-INF/lib 폴더에 복사된다.
+  compile 'org.mybatis:mybatis:3.2.8'
+  compile 'javax.servlet:jstl:1.2'
+  compile 'mysql:mysql-connector-java:5.1.35'
+    
+  // Spring MVC 프레임워크 관련 라이브러리
+  compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+  
+  // mybatis를 스프링 프레임워크에서 사용할 수 있도록 특별히 추가로 만든 클래스 라이브러리
+  compile 'org.mybatis:mybatis-spring:1.2.2'
+  
+  // Spring jdbc 관련 라이브러리
+  compile 'org.springframework:spring-jdbc:4.1.6.RELEASE'
+  
+  // fileUpload 의존 라이브러리
+  compile 'commons-fileupload:commons-fileupload:1.3.1'
+
+  // JSON 입/출력 관련 의존 라이브러리
+  compile 'com.google.code.gson:gson:2.3.1'
+  
+  // 스프링에서 JSON 출력할 때 사용하는 의존 라이브러리
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.5.4'
+
+}
+
 
 
 
